    - Fixed handling of maximised state when shutting down and starting up JabRef.
      Patch by Igor L. Chernyavsky.
    - Fixed bug that prevented correct handling of DOS short file names. Patch
      by Igor L. Chernyavsky.
    - Added support for KOI8_R character set.
    - Removed DocumentPrinter class, using standard API functions instead. Patch by
      Tony Mancill.
    - Removed HightlightFilter class, using standard API functions instead. Patch by
      Tony Mancill.
    - Changed keyboard shortcut for IEEXplorer search to Alt-F8.
    - Disabled JStor search, which doesn't work due to API changes.
    - External file type manager now removes "." prefix in file type extension if the user
      has typed it that way.
    - Preview panel now defaults to preview layout 1 instead of 2. Switched default layouts.
    - Added IfPlural formatter by Russell Almond. The formatter outputs its first argument
      if the input field contains " and " and the second one otherwise.
    - Applied patch by Philipp Cordes and Björn Kahlert for improved handling of names by
      autocompleter. The patch also reorganizes the autocompleter classes.
    - Table will now scroll to keep the currently edited entry visible if an edit leads to
      the entry getting sorted to a different position.
    - Reworked author and editor handling in Docbook export. Added Docbook XML header.
    - Database will no longer be marked as changed after accepting external changes, unless one or
      more changes were not accepted before merging, and unless database was already marked as
      changed.
    - Fixed bug: undesired autocompletion when saving file.
    - Fixed bug: entry editor doesn't appear when new entry is added while a filtering search or
      group selection is active.
    - Fixed bug in writing of metadata on Windows. For certain metadata lengths newlines would be
      messed up after the metadata comment in a bib file.